--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 <!-- fontAwesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-n1Dezns/7VpPe3i3w7VHsNGBu25iMVKv4x4JzVpquULnHeK7nMOiS8SfugBmjmZQYd9X6vFL8WRLQQEiPQ2fzg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-n1Dezns/7VpPe3i3w7VHsNGBu25iMVKv4x4JzVpquULnHeK7nMOiS8SfugBmjmZQYd9X6vFL8WRLQQEiPQ2fzg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+     -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    
 <!-- personalizados -->
     <!-- <link rel="stylesheet" href="Posgrado\static\css\stylesIndex.css">
     <link rel="stylesheet" type="text/css" href="/auxiliar.css"> -->
